--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-inverse navbar-default" role="navigation">
-  <div class="container-fluid">
+<nav class="navbar navbar-static-top navbar-default" role="navigation">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -8,6 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <%= link_to "Pintersting", root_path, class: "navbar-brand" %>
       <a class="navbar-brand" href="#">Pinteresting</a>
     </div>
 
@@ -20,4 +21,5 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+  </div><!-- /.container --> 
 </nav>
